crates/next-custom-transforms/tests/errors/react-server-components/server-graph/image-response/input.js
// This is a comment.

'use strict'

import { ImageResponse } from 'next/server'

export default function () {
  return new ImageResponse()
}
